--- a/construct1/package.json
+++ b/construct1/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@next/eslint-plugin-next": "^14.2.7",
     "@types/react-slick": "^0.23.13",
     "next": "14.2.4",
     "react": "^18",
@@ -16,17 +17,18 @@
     "react-slick": "^0.30.2",
     "slick-carousel": "^1.8.1",
     "swiper": "^11.1.9",
-    "tw-elements": "^2.0.0"
+    "tw-elements": "^2.0.0",
+    "typescript-eslint": "^8.3.0"
   },
   "devDependencies": {
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "autoprefixer": "^10.4.20",
-    "eslint": "^8",
     "eslint-config-next": "14.2.4",
+    "eslint-plugin-next": "^0.0.0",
     "postcss": "^8.4.41",
     "tailwindcss": "^3.4.9",
-    "typescript": "^5"
+    "typescript": "^5.5.4"
   }
 }
