--- a/construct1/tsconfig.json
+++ b/construct1/tsconfig.json
@@ -12,6 +12,9 @@
     "isolatedModules": true,
     "jsx": "preserve",
     "incremental": true,
+    
+
+    
     "plugins": [
       {
         "name": "next"
@@ -21,6 +24,6 @@
       "@/*": ["./src/*"]
     }
   },
-  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts"],
+  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts", "components/**/*", "pages/**/*", "utils/**/*"],
   "exclude": ["node_modules"]
 }
